XP-4322 Checkbox input - Set alignment from input config * Changed logic to depend on input alignment instead of label * Changed default alignment to be checkbox to the left of its label * Cosmetic fixes

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/checkbox.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/checkbox.less
@@ -23,7 +23,7 @@
       height: 13px;
     }
 
-    &.top {
+    &.bottom {
       padding-left: 0px;
       margin-bottom: 19px;
 
@@ -33,29 +33,29 @@
       }
     }
 
-    &.right:before {
+    &.left:before {
       position: absolute;
       left: 0px;
       margin-top: 2px;
     }
 
-    &.left {
+    &.right {
       padding-left: 0px;
       display: inline-block;
       max-width: none;
 
       &:before {
         float: right;
-        margin-left: 7px;
-        margin-top: 2px;
+        margin-left: 10px;
+        margin-top: 3px;
       }
     }
 
-    &.bottom {
+    &.top {
       padding-left: 0px;
 
-      &:before {
-        margin-bottom: 2px;
+      &:after {
+        margin-top: 7px;
       }
     }
   }
